# heather-ai-assistant

./: .env.example  .gitignore  .vercelignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.base.json  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/api/health/: route.ts
apps/web/: .env.example  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx
apps/web/app/api/chat/: route.ts
apps/web/app/api/health/: route.ts
apps/web/app/api/ollama/status/: route.ts
apps/web/app/api/tts/elevenlabs/: route.ts
apps/web/app/floating/: page.tsx
apps/web/components/: HeatherApp.tsx
apps/web/components/heather/: HeatherWorkspace.tsx
apps/web/components/heather/panels/: AnalysisPanel.tsx  AutomationPanel.tsx  BriefingPanel.tsx  ChatPanel.tsx  LocalControlPanel.tsx  MemoryPanel.tsx  ProjectsPanel.tsx  SettingsPanel.tsx  TrainingPanel.tsx
apps/web/lib/: direct-command-matching.ts  direct-command-store.ts  pwa.ts  use-heather-data.ts
apps/web/public/: sw.js
components/: HeatherApp.tsx
docs/: account-aware-automation.md  jarvis-inspired-heather-automation.md  local-desktop-control.md  pinta-inspired-heather-learning.md  supabase-direct-commands-setup.md
lib/: direct-command-store.ts  supabase-client.ts
public/: index.html
scripts/: build-tauri-web.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
supabase/migrations/: 001_create_direct_commands.sql
