[package]
name = "heather-ai-assistant"
version = "0.1.0"
description = "Heather AI Assistant desktop bridge"
authors = ["Heather AI Assistant"]
edition = "2021"

[lib]
name = "heather_ai_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
walkdir = "2"
